Add expert model data generation
